[gd_scene load_steps=55 format=3 uid="uid://iu2q66clupc6"]

[ext_resource type="Script" uid="uid://bwllxup305eib" path="res://scenes/player/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://nwjrfnnav0lk" path="res://scenes/player/player_attack_01.png" id="2_ugbui"]
[ext_resource type="Script" uid="uid://bpu6jo4kvehlg" path="res://scenes/player/player_interaction.gd" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://dgmobjvp2gcxu" path="res://scenes/player/player_attack_02.png" id="3_fcs02"]
[ext_resource type="Texture2D" uid="uid://ceiyxl0dy2cg1" path="res://scenes/player/player_idle.png" id="3_gx1jg"]
[ext_resource type="Script" uid="uid://kqgiavjw07fx" path="res://scenes/interact/interact_ray.gd" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://qro4uo83ba8f" path="res://scenes/player/player_sprite.gd" id="3_qlg0r"]
[ext_resource type="Texture2D" uid="uid://dmvl71i6783rk" path="res://scenes/player/player_walk.png" id="4_ugbui"]
[ext_resource type="PackedScene" uid="uid://yfpfno276rol" path="res://scenes/props/fixed_size_label/fixed_size_label.tscn" id="6_h17s1"]
[ext_resource type="Script" uid="uid://e78f8iq448e1" path="res://scenes/player/animation_player.gd" id="7_0owmy"]
[ext_resource type="Script" uid="uid://kni2yl26matc" path="res://scenes/player/player_fighting.gd" id="7_5gtgg"]
[ext_resource type="PackedScene" uid="uid://deqi3gd0anesg" path="res://scenes/health_bar/health_bar.tscn" id="8_h17s1"]
[ext_resource type="Script" uid="uid://jpf848nkaa7h" path="res://scenes/player/player_controller.gd" id="8_qek5x"]
[ext_resource type="Texture2D" uid="uid://dda0lxfswrncy" path="res://scenes/player/blow.png" id="9_je7p5"]
[ext_resource type="AudioStream" uid="uid://crfylo055wa8e" path="res://scenes/player/blow.wav" id="10_fm80t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("2_ugbui")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("2_ugbui")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4nxn"]
atlas = ExtResource("2_ugbui")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_28m0y"]
atlas = ExtResource("2_ugbui")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbmj2"]
atlas = ExtResource("3_fcs02")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxw46"]
atlas = ExtResource("3_fcs02")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qxvo"]
atlas = ExtResource("3_fcs02")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q8fn"]
atlas = ExtResource("3_fcs02")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("3_gx1jg")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("3_gx1jg")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("3_gx1jg")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("3_gx1jg")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("3_gx1jg")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("3_gx1jg")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("3_gx1jg")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("3_gx1jg")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("3_gx1jg")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("3_gx1jg")
region = Rect2(1728, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uniwh"]
atlas = ExtResource("4_ugbui")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqsei"]
atlas = ExtResource("4_ugbui")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tffgl"]
atlas = ExtResource("4_ugbui")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8ii"]
atlas = ExtResource("4_ugbui")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mf0n"]
atlas = ExtResource("4_ugbui")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hvnv"]
atlas = ExtResource("4_ugbui")
region = Rect2(960, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_6e8lb"]
animations = [{
"frames": [],
"loop": true,
"name": &"all frames",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4nxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28m0y")
}],
"loop": true,
"name": &"attack_01",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbmj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxw46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qxvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q8fn")
}],
"loop": true,
"name": &"attack_02",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uniwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqsei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mf0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hvnv")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vyb7"]
height = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_je7p5"]
size = Vector2(32, 47)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fm80t"]
friction = 0.0
bounce = 1000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h17s1"]
radius = 20.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_je7p5"]
blend_mode = 1

[sub_resource type="Animation" id="Animation_wvgcx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4ypcv"]
resource_name = "got_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1n58k"]
_data = {
&"RESET": SubResource("Animation_wvgcx"),
&"got_hit": SubResource("Animation_4ypcv")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_75vfm"]
closed = false
cull_mode = 1
polygon = PackedVector2Array(7, 7, 24, -20, 14, -49, -3, -74, -17, -61, -17, -42, -31, -42, -27, -8, 6, 7)

[sub_resource type="Animation" id="Animation_0owmy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [20.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerFighting/AirStream:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerFighting/AirStream/Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerFighting/AirStream/Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.12577, 0.12577)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerFighting/AirStream/Sprite2D:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u5klv"]
resource_name = "blow"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 0, 0, 1, 2, 3, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"attack_01"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, 150.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerFighting/AirStream:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerFighting/AirStream/Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerFighting/AirStream/Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.12577, 0.12577), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerFighting/AirStream/Sprite2D:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(2, 0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.456), Color(1, 1, 1, 0)]
}
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerFighting/AirStream/AudioStreamPlayer2D")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_fm80t")
}],
"times": PackedFloat32Array(0.3)
}
tracks/8/use_blend = true

[sub_resource type="Animation" id="Animation_75vfm"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_qek5x"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qek5x"]
_data = {
&"RESET": SubResource("Animation_0owmy"),
&"blow": SubResource("Animation_u5klv"),
&"idle": SubResource("Animation_75vfm"),
&"walk": SubResource("Animation_qek5x")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 19
script = ExtResource("1_g2els")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_6e8lb")
animation = &"idle"
autoplay = "idle"
script = ExtResource("3_qlg0r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_3vyb7")

[node name="PlayerInteraction" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_dqkch")

[node name="InteractRay" type="RayCast2D" parent="PlayerInteraction"]
unique_name_in_owner = true
position = Vector2(0, -24)
target_position = Vector2(80, 0)
collision_mask = 32
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("3_qhqgy")

[node name="InteractMarker" type="Marker2D" parent="PlayerInteraction"]
unique_name_in_owner = true
position = Vector2(-1, -116)

[node name="InteractLabel" parent="PlayerInteraction/InteractMarker" instance=ExtResource("6_h17s1")]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 11.0
offset_right = 1.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerFighting" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("7_5gtgg")

[node name="HealthBar" parent="PlayerFighting" instance=ExtResource("8_h17s1")]
unique_name_in_owner = true
visible = false
offset_left = -38.0
offset_top = -114.0
offset_right = 38.0
offset_bottom = -110.0

[node name="HitBox" type="Area2D" parent="PlayerFighting"]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFighting/HitBox"]
position = Vector2(0, -28.5)
shape = SubResource("RectangleShape2D_je7p5")
debug_color = Color(0.94902, 0.231373, 0, 0.419608)

[node name="AirStream" type="AnimatableBody2D" parent="PlayerFighting"]
unique_name_in_owner = true
position = Vector2(0, -24)
collision_layer = 1024
collision_mask = 768
physics_material_override = SubResource("PhysicsMaterial_fm80t")

[node name="AirStreamCollision" type="CollisionShape2D" parent="PlayerFighting/AirStream"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_h17s1")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="PlayerFighting/AirStream"]
visible = false
material = SubResource("CanvasItemMaterial_je7p5")
scale = Vector2(0.12577, 0.12577)
texture = ExtResource("9_je7p5")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerFighting/AirStream"]

[node name="GotHitAnimation" type="AnimationPlayer" parent="PlayerFighting"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_1n58k")
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_75vfm")
sdf_collision = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_qek5x")
}
script = ExtResource("7_0owmy")

[node name="PlayerController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_qek5x")
